infrastructure/flux-webhook/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  annotations:
    dns.alpha.kubernetes.io/external: "true"
    cert-manager.io/cluster-issuer: self-signed
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/limit-rps: "10"
  labels:
    ingress-class: nginx-public
spec:
  ingressClassName: nginx-public
  tls:
    - hosts:
      - flux-webhook.stage.PLACEHOLDER
      secretName: tls-flux-webhook
  rules:
  - host: flux-webhook.stage.PLACEHOLDER
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
